Added stub for GPT-4 implementation.